--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/http/server.ts"
+    "dev": "tsx --env-file .env src/http/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.33.0",
-    "fastify": "^4.28.1"
+    "fastify": "^4.28.1",
+    "zod": "^3.23.8"
   }
 }
